--- a/content/themes/bradv3/assets/sass/nav.scss
+++ b/content/themes/bradv3/assets/sass/nav.scss
@@ -16,6 +16,7 @@ nav {
   ul {
     list-style: none;
     padding-left: 0;
+    margin-bottom: 0;
     max-width: 1618px;
     width: 80%;
     li {
